--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,6 @@
     @apply w-full;
     @apply bg-red1;
     @apply text-gray11;
-
   }
 
   h1 {
@@ -34,6 +33,27 @@
     @apply underline;
     @apply font-semibold;
 
+  }
+
+  iframe {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+  }
+
+  dt,
+  dd {
+    line-height: 1;
+  }
+
+  dt {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    top: 0.2rem;
+    opacity: 0.8;
+  }
+
+  dd {
+    margin: 0;
   }
 }
 
